#8-9: Securing the API calls (401 response on EmployeeOverview page, common problem, no solution has been found yet)

--- a/BethanysPieShopHRM.Api/appsettings.json
+++ b/BethanysPieShopHRM.Api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BethanysPieShopHRMNew;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
+
+  "Auth0": {
+    "Domain": "dev-r1alhkxfs5xkjvug.eu.auth0.com",
+    "Audience": "https://bethanyspieshophrm.com/api",
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
