--- a/BethanysPieShopHRM.Tests/BethanysPieShopHRM.Tests.csproj
+++ b/BethanysPieShopHRM.Tests/BethanysPieShopHRM.Tests.csproj
@@ -10,7 +10,7 @@
 		<Using Include="Bunit" />
 		<Using Include="Bunit.TestDoubles" />
 		<Using Include="Microsoft.Extensions.DependencyInjection" />
-		<Using Include="Xunit"/>
+		<Using Include="Xunit" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -28,6 +28,10 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\BethanysPieShopHRM.App\BethanysPieShopHRM.App.csproj" />
 	</ItemGroup>
 
 
